Fixing about a million small things

--- a/src/devtools/client/debugger/src/components/shared/Accordion.css
+++ b/src/devtools/client/debugger/src/components/shared/Accordion.css
@@ -72,7 +72,7 @@
 .accordion ._content {
   font-size: var(--theme-body-font-size);
   overflow-y: auto;
-  background-color: white;
+  background-color: var(--theme-body-color);
 }
 
 .accordion li {
