--- a/src/devtools/client/themes/layout.css
+++ b/src/devtools/client/themes/layout.css
@@ -18,6 +18,7 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  background-color: red;
 }
 
 /**
