--- a/src/ui/components/Views/NonDevView.css
+++ b/src/ui/components/Views/NonDevView.css
@@ -1,5 +1,5 @@
 .right-sidebar {
-  background: var(--theme-body-background);
+  background: var(--theme-tab-background);
   display: flex;
   flex-direction: column;
   height: 100%;
